vlib/v/parser/tests/uncomplete_module_call_err.vv
module main

import os

fn main() {
	os.
}
